Made some changes

--- a/numerology-app/views/home.erb
+++ b/numerology-app/views/home.erb
@@ -1,1 +1,7 @@
-<h1 style="color:blue;border:solid;"><%= @message %></h1>
+<body id="home">
+
+	<form method="post" action="/birthdate">
+    	<h1>Please enter your birthdate (MMDDYYYY)<br><br> <input type="text" name="post[birthdate]" />
+    	<input type="submit" name="Search" /></h1>
+	</form>
+</body>
